immediate command input

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -29,6 +29,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
      </widget>
     </item>
    </layout>
@@ -71,9 +74,39 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="dockWidget_2">
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QPlainTextEdit" name="immediateOutput">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="immediateInput"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionAddWatchpoint">
    <property name="text">
     <string>add watchpoint</string>
+   </property>
+  </action>
+  <action name="actionHistoryBack">
+   <property name="text">
+    <string>history back</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
+   </property>
+   <property name="autoRepeat">
+    <bool>false</bool>
    </property>
   </action>
  </widget>
