--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -42,7 +42,7 @@
      <x>0</x>
      <y>0</y>
      <width>820</width>
-     <height>29</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
@@ -89,6 +89,24 @@
      </item>
      <item>
       <widget class="QLineEdit" name="immediateInput"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget_3">
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_3">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QTableWidget" name="watchpointValueTable">
+       <property name="columnCount">
+        <number>2</number>
+       </property>
+       <column/>
+       <column/>
+      </widget>
      </item>
     </layout>
    </widget>
